--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,10 @@ kramdown:
 
 optional_front_matter:
   remove_originals: true
+
+collections:
+  projects: { output: true, permalink: ':name' }
+
+defaults:
+  - scope: { path: '', type: 'projects' }
+    values: { layout: 'project' }
