--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,4 @@ collections:
 
 defaults:
   - scope: { path: '', type: 'projects' }
-    values: { layout: 'project' }
+    values: { layout: 'page' }
